--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gears</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
-
+        <nav class="navbar display-flex">
+            <h1 class="brand">Influencer products</h1>
+            <div class="menu display-flex">
+                <ul class="display-flex">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Sign up</a></li>
+                    <li><a href="">Log In</a></li>
+                </ul>
+                <div class="nav-icon">
+                    <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                    <span><i class="fa-solid fa-cart-shopping"></i></span>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <main>
-        
+
     </main>
 
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
