--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
                 </div>
             </div>
         </nav>
+        <div class="banner">
+            <div class="banner-content display-flex">
+                <div class="banner-left-content">
+                    <h1 class="banner-title">Start your Journey as Influencer</h1>
+                    <p class="banner-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="banner-btn">Preebook now <span><i class="fa-solid fa-arrow-right"></i></span></button>
+                </div>
+                <div class="banner-right-content">
+                    <img src="assets/images/main-camera.png" alt="">
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
