--- a/index.html
+++ b/index.html
@@ -11,37 +11,67 @@
 
 <body>
     <header>
-        <nav class="navbar display-flex">
-            <h1 class="brand">Influencer products</h1>
-            <div class="menu display-flex">
-                <ul class="display-flex">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">Sign up</a></li>
-                    <li><a href="">Log In</a></li>
-                </ul>
-                <div class="nav-icon">
-                    <span><i class="fa-solid fa-magnifying-glass"></i></span>
-                    <span><i class="fa-solid fa-cart-shopping"></i></span>
+        <div class="wrapper">
+            <nav class="navbar display-flex">
+                <h1 class="brand">Influencer products</h1>
+                <div class="menu display-flex">
+                    <ul class="display-flex">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Products</a></li>
+                        <li><a href="">Sign up</a></li>
+                        <li><a href="">Log In</a></li>
+                    </ul>
+                    <div class="nav-icon">
+                        <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                    </div>
                 </div>
-            </div>
-        </nav>
-        <div class="banner">
-            <div class="banner-content display-flex">
-                <div class="banner-left-content">
-                    <h1 class="banner-title">Start your Journey as Influencer</h1>
-                    <p class="banner-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                    <button class="banner-btn">Preebook now <span><i class="fa-solid fa-arrow-right"></i></span></button>
-                </div>
-                <div class="banner-right-content">
-                    <img src="assets/images/main-camera.png" alt="">
+            </nav>
+            <div class="banner">
+                <div class="banner-content display-flex">
+                    <div class="banner-left-content">
+                        <h1 class="banner-title">Start your Journey as Influencer</h1>
+                        <p class="banner-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum
+                            sed scelerisque eros. Lectus faucibus.</p>
+                        <button class="banner-btn">Preebook now <span><i
+                                    class="fa-solid fa-arrow-right"></i></span></button>
+                    </div>
+                    <div class="banner-right-content">
+                        <img src="assets/images/main-camera.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
     </header>
 
     <main>
-        
+        <section class="image-box">
+
+            <div class="img-box display-grid">
+                <div class="img-contianer">
+                    <img src="assets/logos/Alibaba.svg" alt="">
+                </div>
+                <div class="img-container">
+                    <img src="assets/logos/Amazon.svg" alt="">
+                </div>
+                <div class="img-container">
+                    <img src="assets/logos/Daraz.pk Logo.svg" alt="">
+                </div>
+                <div class="img-container">
+                    <img src="assets/logos/Ebay.svg" alt="">
+                </div>
+                <div class="img-container">
+                    <img src="assets/logos/Rakuten.svg" alt="">
+                </div>
+                <div class="img-container">
+                    <img src="assets/logos/Walmart.svg" alt="">
+                </div>
+                <div class="img-container">
+                    <img src="assets/logos/Target.svg" alt="">
+                </div>
+            </div>
+
+        </section>
     </main>
 
     <footer>
