feature section added

--- a/index.html
+++ b/index.html
@@ -214,6 +214,21 @@
                 <div class="card-btn"><a href="#">See More <span><i class="fa-solid fa-arrow-right"></i></span></a></div>
             </div>
         </section>
+        <section class="feature">
+            <div class="feature-content display-flex">
+                <div class="feature-left">
+                    <img src="assets/images/gear.png" alt="">
+                </div>
+                <div class="feature-right">
+                    <div class="feature-right-content">
+                        <h1 class="feature-title">Featured products at one place</h1>
+                        <p class="feature-desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        <button class="feature-btn">Join Now <span> <i class="fa-solid fa-arrow-right"></i></span></button>
+                    </div>
+                </div>
+            </div>
+            
+        </section>
     </main>
 
     <footer>
